# advent-of-code-2023

./: README.md  pyproject.toml
day_01/: trebuchet-p1.py  trebuchet-p2.py
day_02/: cube_conundrum_p1.py  cube_conundrum_p2.py
day_03/: gear_ratios_p1.py  gear_ratios_p2.py
day_04/: scratchcards_p1.py  scratchcards_p2.py
day_05/: fertilizer_p1.py  fertilizer_p2.py
day_06/: wait_for_it_p1.py  wait_for_it_p2.py
day_07/: camel_cards_p1.py  camel_cards_p2.py
day_08/: haunted_wasteland_p1.py  haunted_wasteland_p2.py
utils/: io_utils.py
