[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = "Repo for advent of code 2023 in Python"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "aoc_2023"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
